# platform.core.api.bluetooth

./: .project  CMakeLists.txt  bluetooth-test.manifest  capi-network-bluetooth.pc.in
TC/: READAME.txt  config  tetware.conf
TC/testcase/: Makefile  tslist  utc_network_bluetooth_adapter_negative.c  utc_network_bluetooth_adapter_positive.c  utc_network_bluetooth_audio_negative.c  utc_network_bluetooth_audio_positive.c  utc_network_bluetooth_avrcp_negative.c  utc_network_bluetooth_avrcp_positive.c  utc_network_bluetooth_common_negative.c  utc_network_bluetooth_common_positive.c  utc_network_bluetooth_device_discovery_negative.c  utc_network_bluetooth_device_discovery_positive.c  utc_network_bluetooth_device_negative.c  utc_network_bluetooth_device_positive.c  utc_network_bluetooth_gatt_negative.c  utc_network_bluetooth_gatt_positive.c  utc_network_bluetooth_hdp_negative.c  utc_network_bluetooth_hdp_positive.c  utc_network_bluetooth_hid_negative.c  utc_network_bluetooth_hid_positive.c  utc_network_bluetooth_opp-client_negative.c  utc_network_bluetooth_opp-client_positive.c  utc_network_bluetooth_opp-server_negative.c  utc_network_bluetooth_opp-server_positive.c  utc_network_bluetooth_pan_negative.c  utc_network_bluetooth_pan_positive.c  utc_network_bluetooth_service_search_negative.c  utc_network_bluetooth_service_search_positive.c  utc_network_bluetooth_socket_negative.c  utc_network_bluetooth_socket_positive.c
debian/: changelog  control  rules
doc/: bluetooth_doc.h
include/: bluetooth.h  bluetooth_extension.h  bluetooth_extention.h  bluetooth_internal.h  bluetooth_private.h  bluetooth_type.h  bluetooth_type_extention.h  bluetooth_type_internal.h
include/mobile/: .bluetooth_type.h.swp  bluetooth.h  bluetooth_extension.h  bluetooth_internal.h  bluetooth_type.h  bluetooth_type_extension.h  bluetooth_type_internal.h
include/tv/: bluetooth.h  bluetooth_internal.h  bluetooth_type.h  bluetooth_type_internal.h
include/wearable/: bluetooth.h  bluetooth_extension.h  bluetooth_internal.h  bluetooth_type.h  bluetooth_type_extension.h  bluetooth_type_internal.h
packaging/: capi-network-bluetooth.changes  capi-network-bluetooth.spec
src/: .bluetooth-gatt.c.swp  bluetooth-adapter.c  bluetooth-audio.c  bluetooth-avrcp.c  bluetooth-common.c  bluetooth-device.c  bluetooth-dpm.c  bluetooth-gatt.c  bluetooth-hdp.c  bluetooth-hid.c  bluetooth-ipsp.c  bluetooth-opp-client.c  bluetooth-opp-server.c  bluetooth-pan.c  bluetooth-pbap.c  bluetooth-socket.c  bluetooth.c
src/ntb/capi/: bluetooth.c
src/ntb/include/: ntb-bluetooth.h
src/ntb/test/: bluez-capi-test.c
test/: CMakeLists.txt  bt_chat_client.c  bt_chat_server.c  bt_onoff.c  bt_unit_test.c  bt_unit_test.c~  bt_unit_test.h  capi-network-bluetooth-test
test/ntb/: bluez-capi-test.c
